@startuml
'https://plantuml.com/sequence-diagram

class Folder
class File

abstract class AbstractFile {
    String name
    String path

    + {abstract} String getStringTreeFolder()
    + {abstract} String getPath()
    + {abstract} void addItem(AbstractFile file)
    + {abstract} void removeItem(AbstractFile file)
}

AbstractFile --|> Folder
AbstractFile --|> File

Folder *--> AbstractFile : files "*"

@enduml